package org.opencb.biodata.models.variant.protobuf;

import "VariantStats.proto";
import "VariantAnnotation.proto";
//import "CommonTypes.proto";

option java_outer_classname = "VariantProtos";

//message VariantFileAttributes {
//    message KeyValue {
//        required string key = 1;                        /* Key of the pair */
//        required string value = 2;                      /* Value of the pair */
//    }
//
//    repeated KeyValue attrs = 1;
//}
//
//
//message VariantSample {
//    required string sample = 1;
//}



message VariantSourceEntry{
    message KeyMap {
        required string key = 1;
        required Map value = 2;
    }
    required string file_id = 1;                /* Unique identifier of the archived file. */
    required string study_id = 2;               /* Unique identifier of the study containing the archived file. */
    repeated string secondary_alternates = 3;   /* Alternate alleles that appear along with a variant alternate. */
    required string format = 4;                 /* Fields stored for each sample. */
    repeated KeyMap samples_data = 5;           /* Genotypes and other sample-related information. The keys are the names of the samples.
                                                    The values are pairs (field name, field value), such as (GT, A/C). */
    required VariantStats stats = 6;            /* Statistics of the genomic variation, such as its alleles/genotypes count or its minimum allele frequency. */
    optional Map attributes = 7;                /* Optional attributes that probably depend on the format of the file the variant was initially read from. */
}


message Variant {
    message KeyVariantSourceEntry {
        required string key = 1;
        required VariantSourceEntry value = 2;
    }
    message KeyValueSet {
        required string key = 1;
        repeated string value = 2;
    }
    required VariantType type                       = 1;
    required string chromosome                      = 2;
    required int32 start                            = 3;
    required int32 end                              = 4;
    required int32 length                           = 5;
    required string reference                       = 6;
    required string alternate                       = 7;
    optional string id                              = 8;
    repeated KeyValueSet hgvs                       = 9;
    repeated KeyVariantSourceEntry source_entries   = 10;
    optional VariantAnnotation annotation           = 11;
}


