package org.opencb.biodata.models.variant.protobuf;

//import "CommonTypes.proto";
import "VariantAnnotation.proto";

option java_outer_classname = "VariantStatsProtos";

enum AllelesCode {
    ALLELES_OK                           = 1;
    ALLELES_MISSING                      = 2;
    MULTIPLE_ALTERNATES                  = 3;
    HAPLOID                              = 4;
    //    FIRST_ALLELE_MISSING,
    //    SECOND_ALLELE_MISSING,
    //    ALL_ALLELES_MISSING,
}
enum VariantType {
    SNV     = 0;
    MNV     = 1;
    INDEL   = 2;
    SV      = 3;
    CNV     = 4;
}

message Genotype {
    required string reference            = 1;
    required string alternate            = 2;
    repeated int32 alleles_idx           = 3;
    required bool phased                 = 4;
    required AllelesCode code            = 5;
    required int32 count                 = 6;
}
message VariantHardyWeinbergStats {
    required float chi2                  = 1;
    required float pValue                = 2;
    required int32 n                     = 3;
    required int32 n_AA                  = 4;           /* n_AA */
    required int32 n_Ala                 = 5;           /* n_Aa */
    required int32 n_lala                = 6;           /* n_aa */
    required float e_AA                  = 7;           /* e_AA */
    required float e_Ala                 = 8;           /* e_Aa */
    required float e_lala                = 9;           /* e_aa */
    required float p                     = 10;
    required float q                     = 11;
}

message VariantStats {
    message Count {
        required Genotype key            = 1;            /* Key of the pair */
        required int32 count             = 2;            /* Value of the pair */
    }
    message Frequency {
        required Genotype key            = 1;            /* Key of the pair */
        required float frequency         = 2;            /* Value of the pair */
    }

    required string ref_allele           = 24;
    required string alt_allele           = 25;
    required VariantType type            = 26;

    required int32 ref_allele_count      = 1;
    required int32 alt_allele_count      = 2;
    repeated Count genotypes_count       = 3;

    required float ref_allele_freq       = 4;
    required float alt_allele_freq       = 5;
    repeated Frequency genotypes_freq    = 6;

    required int32 missing_alleles       = 7;            /* Number of alleles whose information is missing */
    required int32 missing_genotypes     = 8;            /* Number of genotypes with at least one allele missing */
    
    required float maf                   = 9;            /* Minor allele frequency */
    required float mgf                   = 10;           /* Minor genotype frequency */
    required string mafAllele            = 11;           /* Allele with minor allele frequency */
    required string mgfGenotype          = 12;           /* Genotype with minor genotype frequency */

    required bool passed_filters         = 13;
    
    required float quality               = 14;
    
    required int32 num_samples           = 15;

//    required int32 transitions_count = 16;
//    required int32 transversions_count = 17;

    /* Optional fields, they require pedigree information */

    optional int32 mendelian_errors                     = 18;       /* Number of mendelian errors found */
    
    optional float cases_percent_dominant               = 19;       /* Percentage of cases that follow a dominant inheritance pattern */
    optional float controls_percent_dominant            = 20;       /* Percentage of controls that follow a dominant inheritance pattern */
    optional float cases_percent_recessive              = 21;       /* Percentage of cases that follow a recessive inheritance pattern */
    optional float controls_percent_recessive           = 22;       /* Percentage of controls that follow a recessive inheritance pattern */
    
    optional VariantHardyWeinbergStats hardy_weinberg   = 23;       /* All samples Hardy-Weinberg stats*/
}
